--- a/insta_mobile/ios/Podfile
+++ b/insta_mobile/ios/Podfile
@@ -54,6 +54,8 @@ target 'insta_mobile' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'insta_mobileTests' do
     inherit! :complete
     # Pods for testing
