--- a/insta_mobile/package.json
+++ b/insta_mobile/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.1"
+    "react-native": "0.62.1",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-navigation": "^4.3.7",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
