--- a/insta_mobile/package.json
+++ b/insta_mobile/package.json
@@ -20,6 +20,7 @@
     "react-native-screens": "^2.4.0",
     "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.11",
+    "socket.io-client": "^2.3.0",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
