--- a/insta_mobile/ios/Podfile
+++ b/insta_mobile/ios/Podfile
@@ -56,6 +56,8 @@ target 'insta_mobile' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'insta_mobileTests' do
     inherit! :complete
     # Pods for testing
